--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,20 +1,20 @@
 body {
-  background-color: #fbc547;
-  color: #333;
+  background-color: color(display-p3 0.006 0.068 0.195 / 1);
+  color: #ddd;
   font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
     "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
     "Roboto", "Noto", "Droid Sans", "Cantarell", "Oxygen", "Ubuntu",
     "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
   padding: 18vh 1rem;
-  text-align: center;
+  text-align: left;
 }
 
 a {
-  color: rgba(#000, 0.7);
+  color: rgba(#cfc, 0.7);
 
   &:focus,
   &:hover {
-    color: rgba(#000, 0.6);
+    color: rgba(#cfc, 0.6);
   }
 }
 
