Update top page content

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -27,7 +27,7 @@ title: Joseph D. Van Alstyne
     </li>
     <li>
       <%= link_to(
-        "this website",
+        "this website (work in progress)",
         "#"
       ) %>
     </li>
