Add various links

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -6,7 +6,7 @@ title: Joseph D. Van Alstyne
   Joseph D. Van Alstyne
 </h1>
 <h2>
-  developer
+  software developer
 </h2>
 <h3>
   current projects
@@ -31,18 +31,26 @@ title: Joseph D. Van Alstyne
         "#"
       ) %>
     </li>
-    <li>unannounced project</li>
+    <li class="stricken">unannounced project</li>
   </ul>
 </h3>
-<h3>
+<h3 class="stricken">
   resume
 </h3>
 <h3>
-  LinkedIn
+  <%= link_to(
+    "LinkedIn",
+    "https://www.linkedin.com/in/jvanalstyne",
+    target: "_blank"
+  ) %>
 </h3>
 <h3>
-  personal blog
+  <%= link_to(
+    "personal blog",
+    "https://blog.kappanjoe.com",
+    target: "_blank"
+  ) %>
 </h3>
-<h3>
+<h3 class="stricken">
   contact me
 </h3>
