Add cursor character to heading

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,10 +3,10 @@ title: Joseph D. Van Alstyne
 ---
 
 <h1>
-  Joseph D. Van Alstyne
+  Joseph D. Van Alstyne<span class="cursor-char">▌</span>
 </h1>
 <h2>
-  software developer
+  software developer in 東京都
 </h2>
 <h3>
   current projects
