--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,6 +13,17 @@ title: Joseph D. Van Alstyne
   <ul>
     <li>
       <%= link_to(
+        "this website (work in progress)",
+        "#"
+      ) %>
+    </li>
+  </ul>
+</h3>
+<h3>
+  previous projects (links may be broken)
+  <ul>
+    <li>
+      <%= link_to(
           "oriori",
           "https://oriori.app",
           target: "_blank"
@@ -25,13 +36,6 @@ title: Joseph D. Van Alstyne
         target: "_blank"
       ) %>
     </li>
-    <li>
-      <%= link_to(
-        "this website (work in progress)",
-        "#"
-      ) %>
-    </li>
-    <li class="stricken">unannounced project</li>
   </ul>
 </h3>
 <h3 class="stricken">
@@ -44,12 +48,8 @@ title: Joseph D. Van Alstyne
     target: "_blank"
   ) %>
 </h3>
-<h3>
-  <%= link_to(
-    "personal blog",
-    "https://blog.kappanjoe.com",
-    target: "_blank"
-  ) %>
+<h3 class="stricken">
+  personal blog
 </h3>
 <h3 class="stricken">
   contact me
